# Optimus

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  commitlint.config.js  docker-compose.yml  index.html  main.py  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  commitlint.yml  dependency-review.yml  docker-release.yml  release-please.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  GAMEPLAY.md
docs/legal/: datenschutz.md  impressum.md
gridplay/: __init__.py  config.py  constants.py  legal.py
optimus/: __init__.py  config.py  constants.py
tests/: conftest.py  test_bug_fixes.py  test_config.py  test_config_module.py  test_constants.py  test_coupling.py  test_game_state.py  test_index_html.py  test_legal.py  test_smoke.py  test_weather.py
