[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimus"
version = "2.0.0"
description = "Battery Trader Sim — multiplayer energy trading educational game"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Tim Para and contributors" }]
keywords = [
    "energy",
    "trading",
    "simulation",
    "education",
    "fastapi",
    "websocket",
    "classroom-game",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aiosqlite>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.urls]
Homepage = "https://github.com/timpara/Optimus"
Repository = "https://github.com/timpara/Optimus"
Issues = "https://github.com/timpara/Optimus/issues"
Changelog = "https://github.com/timpara/Optimus/blob/main/CHANGELOG.md"

[tool.setuptools]
py-modules = ["main"]
packages = ["optimus"]

# ──────────────────────────────────────────────────────────────────────────
# Ruff — lint + format (replaces black, flake8, isort)
# ──────────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
# main.py is a large legacy file slated for a package-split refactor.
# It is checked separately with a relaxed rule set until that work lands.
extend-exclude = ["CHANGELOG.md", "main.py"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # function call in default argument (common FastAPI pattern)
    "RUF003", # ambiguous unicode in comments (we use en-dashes and Greek letters deliberately)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ──────────────────────────────────────────────────────────────────────────
# mypy — static type checking
# Only covers code under src/ once the package split lands. Until then, the
# legacy main.py is excluded (it already has extensive type hints but relies
# on runtime fastapi/aiosqlite shapes that aren't worth stubbing).
# ──────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
files = ["tests/conftest.py"]
exclude = ["^main\\.py$", "^\\.venv/"]

[[tool.mypy.overrides]]
module = ["aiosqlite.*"]
ignore_missing_imports = true

# ──────────────────────────────────────────────────────────────────────────
# pytest
# ──────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
    # FastAPI's `@app.on_event` was deprecated in favor of lifespan handlers;
    # migrating is tracked as a separate refactor.
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*/site-packages/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
